# aimforce-cloud

./: .env.template  .gitignore  ACTION-ITEMS-FOR-MISTER-O.md  AGENCY-EMPIRE-BLUEPRINT.md  AI-RECEPTIONIST-PLATFORM.md  ANALYTICS-VALIDATION-REPORT.md  CLAUDE.md  COMPLETE-STATUS-REPORT.md  CONTENT-AGENCY-PLAN.md  DEVELOPER-AUDIT-REPORT.md  EMPIRE-VALIDATION-MISSION.md  END-OF-DAY-HANDOFF.md  EXECUTIVE-SUMMARY-FOR-SAID.md  HANDOFF.md  IMMEDIATE-ACTION-ITEMS.md  INFRASTRUCTURE-CLEANUP.md  MARKETING-SERVICES-PACKAGE.md  MASTER-CONTROL-PLATFORM.md  NOVA-STATUS.md  PRODUCT-COMPARISON.md  PROJECT-TRACKER.md  QUANT-POLYMARKET-STRATEGY.md  QUANT-STRATEGY-SUMMARY.md  QUICK-WINS.md  README.md
Projects/polymarket-agents/: .env.template  CHANGELOG.md  CLAUDE.md  DEMO_OUTPUT.md  HANDOFF.md  PHASE2_SUMMARY.md  README_PHASE2.md  pyproject.toml
Projects/polymarket-agents/config/: default.yaml
Projects/polymarket-agents/polymarket_agents/: __init__.py  __main__.py  config.py
Projects/polymarket-agents/polymarket_agents/agents/: nova.py  researcher.py  scanner.py  strategy_engineer.py
Projects/polymarket-agents/polymarket_agents/core/: backtest.py  base_agent.py  logger.py  message_bus.py  models.py
Projects/polymarket-agents/polymarket_agents/data/: clob_client.py  gamma_client.py  subgraph_client.py  websocket_feed.py
Projects/polymarket-agents/polymarket_agents/utils/: formatting.py
Projects/polymarket-agents/tests/: conftest.py  test_backtest.py  test_config.py  test_models.py  test_strategy_models.py
Projects/polymarket-agents/tests/agents/: test_nova.py  (+3 more)
(+243 files in other folders)
